--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,7 @@
-[package]
-name = "starlink-client"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+resolves = "3"
 
-[dependencies]
-reqwest = { version = "0.12", features = ["json"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1", features = ["full"] }
-futures = "0.3"
-tonic = "0.12"
-prost = "0.13"
-
-[build-dependencies]
-reqwest = { version = "0.12", features = ["blocking"] }
-serde_json = "1"
-tonic-build = "0.12"
+members = [
+  "grpc",
+  "openapi"
+]
